fix: Alter flex direction and align content
Changed the flex direction in body to column for easier alignment of
various items.
Centered the container div for all items with flex properties.
Grouped header and footer with flex property adding space between.
Adjusted background-color, color, link, and list styles/decorations.

Implemented-by: Brett Lawton

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,10 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+a {
+  text-decoration: none;
+  color: #666;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+ul {
+  display: flex;
+  gap: 16px;
+
+  list-style: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  flex: 1 1 0;
+  gap: 16px;
+}
+
+.footer {
+  background-color: #eee;
 }
 
 img {
@@ -16,6 +56,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
